--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="float y position">
     <meta name="keywords" content="html, tutorial">
 
-    <link rel="stylesheet" href="./css/donas.css">
+    <link rel="stylesheet" href="./css/componentes.css">
     <link rel="stylesheet" href="./css/principal.css">
     <link rel="shortcut icon" href="rosquillas.svg" type="image/x-icon">
 
@@ -26,9 +26,9 @@
     <nav class="navbar">
         <img class="imagen-logo" src="./imagenes/logo.png" alt="Logo">
         <ul class="menu">
-            <li><a href="./donas.html">Inicio</a></li>
-            <li><a href="#productos">Productos</a></li>
-            <li><a href="#tabla-nutricional">Contactanos</a></li>
+            <li class="menu-link"><a href="./donas.html">Inicio</a></li>
+            <li class="menu-link"><a href="#productos">Productos</a></li>
+            <li class="menu-link"><a href="#tabla-nutricional">Contactanos</a></li>
         </ul>
     </nav>
 
@@ -91,7 +91,6 @@
 
         </div>
 
-
         <div class="contenedor-relative fondo">
 
             <div class="texto-imagen">
@@ -106,18 +105,18 @@
 
         <div class="redes-sociales">
 
-            <a href="https://www.facebook.com/DeliDonasBogota-342841556500632" target="_blank" rel="noopener noreferrer"
-                title="www.facebook.com">
+            <a class="redes-sociales-link" href="https://www.facebook.com/DeliDonasBogota-342841556500632"
+                target="_blank" rel="noopener noreferrer" title="www.facebook.com">
                 <img class="logos-redes" src="./imagenes/facebook.svg" alt="logo-facebook">
             </a>
 
-            <a href="https://instagram.com/delidonasbogota?igshid=818vivgcjxy7" target="_blank"
-                rel="noopener noreferrer" title="www.instagram.com">
+            <a class="redes-sociales-link" href="https://instagram.com/delidonasbogota?igshid=818vivgcjxy7"
+                target="_blank" rel="noopener noreferrer" title="www.instagram.com">
                 <img class="logos-redes" src="./imagenes/instagram.svg" alt="logo-instagram">
             </a>
 
-            <a href="https://wa.link/mk0mg0" target="_blank" rel="noopener noreferrer">
-                <img src="./imagenes/logo-whastapp.png" alt="logo-whatsapp">
+            <a class="redes-sociales-link" href="https://wa.link/mk0mg0" target="_blank" rel="noopener noreferrer" >
+                <img src="./imagenes/whatsapp.svg" alt="logo-whatsapp">
             </a>
 
 
@@ -182,7 +181,10 @@
     </main>
 
     <footer class="footer">
-        Copyright
+        <h3 class="footer-h3">
+            Copyright
+        </h3>
+        
     </footer>
 
 </body>
